fix overflow of todo

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ header {
   flex-direction: column;
   padding: 1% 8%;
   justify-content: space-between;
+  overflow-y: auto;
 }
 
 .row {
